<resources>
    <string name="app_name">MessengerApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Enter Your Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_user">New User</string>
    <string name="sign_up">Sign-Up</string>
    <string name="or_sign_in_with">OR Sign in with</string>
    <string name="username">UserName</string>
    <string name="register">Register</string>
    <string name="have_account">Have Account?</string>
</resources>
