<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".RegisterActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/register_new"
        android:backgroundTint="#30FFFFFF"
        android:backgroundTintMode="src_over">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme"
            >

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#263973"
                app:titleTextColor="@color/white"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                />
        </com.google.android.material.appbar.AppBarLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:paddingBottom="20sp"
            android:textColor="#D8E3E3"
            android:textStyle="bold"
            android:textSize="60sp">

        </TextView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="#000000"
            android:layout_marginStart="30dp"
            android:textStyle="bold"
            android:padding="15dp"
            android:textSize="20sp"

            />


        <EditText
            android:id="@+id/username_register"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginStart="30dp"
            android:autofillHints="name"
            android:background="@drawable/custom_editbox"
            android:hint="Enter first Name"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="#EFE2EE"
            android:textSize="15sp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="448dp"
            android:layout_height="628dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:padding="15dp"
                android:text="@string/email"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"


                />


            <EditText
                android:id="@+id/email_register"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_marginStart="30dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/custom_editbox"
                android:hint="Enter your email"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textColorHint="#EFE2EE"
                android:textSize="15sp"
                android:textStyle="italic" />

            <!--            <TextView-->
            <!--                android:id="@+id/edt_phone"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginStart="30dp"-->
            <!--                android:padding="15dp"-->
            <!--                android:text="@string/phone"-->
            <!--                android:textColor="#000000"-->
            <!--                android:textSize="20sp"-->
            <!--                android:textStyle="bold"-->

            <!--                />-->


            <!--            <EditText-->
            <!--                android:id="@+id/edt_phone_reg"-->
            <!--                android:layout_width="300dp"-->
            <!--                android:layout_height="45dp"-->
            <!--                android:layout_marginStart="30dp"-->
            <!--                android:autofillHints="phone"-->
            <!--                android:background="@drawable/custom_editbox"-->
            <!--                android:hint="Enter your phone"-->
            <!--                android:inputType="phone"-->
            <!--                android:padding="15dp"-->
            <!--                android:textColor="@color/white"-->
            <!--                android:textColorHint="#EFE2EE"-->
            <!--                android:textSize="15sp"-->
            <!--                android:textStyle="italic" />-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:padding="15dp"
                android:text="@string/password"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />


            <!--            <TextView-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginStart="30dp"-->
            <!--                android:padding="15dp"-->
            <!--                android:text="@string/password_conf"-->
            <!--                android:textColor="#000000"-->
            <!--                android:textSize="20sp"-->
            <!--                android:textStyle="bold" />-->


            <!--            <EditText-->
            <!--                android:id="@+id/edt_password2"-->
            <!--                android:layout_width="300dp"-->
            <!--                android:layout_height="45dp"-->
            <!--                android:layout_marginStart="30dp"-->
            <!--                android:autofillHints="password"-->
            <!--                android:background="@drawable/custom_editbox"-->
            <!--                android:hint="Enter your password Again"-->
            <!--                android:inputType="textPassword"-->
            <!--                android:padding="15dp"-->
            <!--                android:textColor="@color/white"-->
            <!--                android:textColorHint="#EFE2EE"-->
            <!--                android:textSize="15sp"-->
            <!--                android:textStyle="italic" />-->


            <EditText
                android:id="@+id/password_register"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_marginStart="30dp"
                android:autofillHints="password"
                android:background="@drawable/custom_editbox"
                android:hint="Enter your password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textColorHint="#EFE2EE"
                android:textSize="15sp"
                android:textStyle="italic" />

            <Button
                android:id="@+id/register_btn"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/custombutton3"
                android:padding="15dp"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="18dp"
                android:padding="15dp"
                android:text="@string/have_account"
                android:textColor="#000000"
                android:textSize="22sp"
                android:textStyle="bold" />


            <Button
                android:id="@+id/btn_login_reg"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="20dp"
                android:background="@drawable/custombutton3"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>
</LinearLayout>